# Neurochain-DSL-Stellar

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release_sha256sums.yml
contracts/CBLFA6FCYHI7RN3MMTQJV5TUKEYECQJAUE74HD5ZJM4NXMHCN4OJKCIJ/: policy.json
contracts/hello/: policy.json
demo_contracts/stellar_demo_contract/: Cargo.toml
demo_contracts/stellar_demo_contract/src/: lib.rs
docs/: getting_started.md  language.md  models.md  security.md  stellar_actions_guide.md  stellar_mvp.md
examples/: intent_stellar_payment_flow.nc  intent_stellar_policy_typed_stage2_normalize.nc  multi_model_if_payment.nc  soroban_claim_rewards_template.nc  soroban_claim_rewards_template_policy.json  soroban_deposit_template.nc  soroban_deposit_template_policy.json  soroban_swap_template.nc  soroban_swap_template_policy.json  stellar_actions_example.nc
examples/x402_response_contract/: README.md  approved.json  blocked_exit_3_allowlist.json  blocked_exit_4_contract_policy.json  blocked_exit_5_intent_safety.json  client_adapter.ts  expired.json  invalid_payment.json  payment_required.json  replay_blocked.json  requires_approval.json  schema.json  types.ts  viewer.html  viewer.js
hackathons/stellar-real-world-zk/: ARCHITECTURE.md  DEMO_SCRIPT.md  README.md  SUBMISSION.md  SUBMISSION_CHECKLIST.md
hackathons/stellar-real-world-zk/contracts/: Cargo.toml  README.md
hackathons/stellar-real-world-zk/deployments/: README.md  testnet.json
hackathons/stellar-real-world-zk/e2e/: Cargo.toml  README.md
hackathons/stellar-real-world-zk/e2e/tests/: pipeline.rs
hackathons/stellar-real-world-zk/fixtures/: groth16_approved.json
hackathons/stellar-real-world-zk/guest/: Cargo.toml  README.md
hackathons/stellar-real-world-zk/host/: Cargo.toml  README.md
hackathons/stellar-real-world-zk/risc0/: Cargo.toml  private_input.example.json
hackathons/stellar-real-world-zk/risc0/host/: Cargo.toml
hackathons/stellar-real-world-zk/risc0/host/src/: main.rs
hackathons/stellar-real-world-zk/risc0/methods/guest/: Cargo.toml
hackathons/stellar-real-world-zk/risc0/methods/guest/src/: main.rs
hackathons/stellar-real-world-zk/scripts/: check_submission_package.ps1  deploy_testnet.ps1  run_demo_rehearsal.ps1  run_risc0_e2e.ps1  (+2 more)
hackathons/stellar-real-world-zk/soroban/: Cargo.toml  README.md
hackathons/stellar-real-world-zk/soroban/src/: lib.rs
hackathons/stellar-real-world-zk/soroban/tests/: groth16_proof.rs
models/: README.md  THIRD_PARTY_NOTICES.md  manifest.json
models/distilbert-sst2/: README.md
models/factcheck/: README.md
models/intent/: README.md
models/intent_macro/: README.md
models/intent_stellar/: README.md
models/toxic_quantized/: README.md
scripts/: fetch_models.ps1  fetch_models.sh
src/: actions.rs  help_text.rs  intent_stellar.rs  lib.rs  main.rs  server_stellar_demo.rs  soroban_deep.rs  x402_facilitator.rs  x402_stellar.rs  x402_store.rs  zk_attestation.rs
tests/: actions.rs  flow_cli.rs  intent_macro_golden2.rs  intent_stellar_golden.rs  intent_stellar_pipeline.rs  server_analyze.rs  server_stellar_demo.rs  soroban_repl.rs  soroban_script.rs  stellar_repl.rs  stellar_script.rs  zk_guardrail_contract.rs
(+9 files in other folders)
