[package]
name = "neurochain-zk-guardrail-e2e"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
neurochain-zk-guardrail-contract = { path = "../shared" }
neurochain-zk-guardrail-guest-adapter = { path = "../guest" }
neurochain-zk-guardrail-host-adapter = { path = "../host" }
neurochain-zk-guardrail-soroban-boundary = { path = "../contracts" }
