[package]
name = "neurochain-zk-risc0-host"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
bincode = "1.3"
neurochain-zk-guardrail-contract = { path = "../../shared" }
neurochain-zk-guardrail-host-adapter = { path = "../../host" }
neurochain-zk-guardrail-soroban-boundary = { path = "../../contracts" }
neurochain-zk-risc0-methods = { path = "../methods" }
neurochain-zk-risc0-types = { path = "../types" }
risc0-zkvm = { version = "=3.0.5", features = ["disable-dev-mode"] }
