[package]
name = "neurochain-zk-risc0-guest"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[workspace]

[dependencies]
neurochain-zk-guardrail-contract = { path = "../../../shared" }
neurochain-zk-guardrail-guest-adapter = { path = "../../../guest" }
neurochain-zk-risc0-types = { path = "../../types" }
risc0-zkvm = { version = "=3.0.5", default-features = false, features = ["std"] }
